--- a/app/src/app/meetings/meetings.component.html
+++ b/app/src/app/meetings/meetings.component.html
@@ -1,1 +1,75 @@
-<p>meetings works!</p>
+<nz-breadcrumb>
+    <nz-breadcrumb-item>
+        <a [routerLink]="['/']"><i nz-icon nzType="home"></i></a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item><i nz-icon nzType="schedule" nzTheme="outline"></i> <span>Meetings</span></nz-breadcrumb-item>
+</nz-breadcrumb>
+<nz-button-group>
+    <a nz-button nzType="primary">
+        <i nz-icon nzType="bars" nzTheme="outline"></i> All meetings
+    </a>
+    <a nz-button nzType="primary">
+        <i nz-icon nzType="stop" nzTheme="outline"></i> Canceled meetings
+    </a>
+    <a nz-button nzType="primary">
+        <i nz-icon nzType="heart" nzTheme="outline"></i> Free entry meetings
+    </a>
+</nz-button-group>
+<hr>
+<nz-table #table [nzData]="meetings">
+    <thead>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Creator ID</th>
+        <th>Room ID</th>
+        <th>Entry type</th>
+        <th>Actions</th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let meeting of table.data">
+            <td>{{ meeting.id }}</td>
+            <td>{{ meeting.title }}</td>
+            <td>{{ meeting.description }}</td>
+            <td>{{ meeting.startDate }}</td>
+            <td>{{ meeting.endDate }}</td>
+            <td>{{ meeting.creatorId }}</td>
+            <td>{{ meeting.roomId }}</td>
+            <td>{{ meeting.freeEntry ? 'Free Entry' : 'By Invitation' }}</td>
+            <td>
+                <nz-button-group>
+                    <button 
+                        [routerLink]="['/meeting', meeting.id]" 
+                        nz-button 
+                        nzType="primary" 
+                        nzShape="round"
+                        nz-tooltip
+                        nzTooltipTitle="Edit"
+                    >
+                        <i nz-icon nzType="edit" nzTheme="outline"></i>
+                    </button>
+                    <button 
+                        nz-button 
+                        nzType="default" 
+                        nzShape="round"
+                        nz-tooltip
+                        nzTooltipTitle="Cancel"
+                    >
+                        <i nz-icon nzType="stop" nzTheme="outline"></i>
+                    </button>
+                    <button 
+                        nz-button 
+                        nzType="danger" 
+                        nzShape="round"
+                        nz-tooltip
+                        nzTooltipTitle="Delete"
+                    >
+                        <i nz-icon nzType="delete" nzTheme="outline"></i>
+                    </button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
