--- a/app/src/app/meeting/meeting.component.scss
+++ b/app/src/app/meeting/meeting.component.scss
@@ -1,21 +1,14 @@
 nz-breadcrumb {
     margin-bottom: 20px;
 }
+form {
+    max-width: 500px;
+}
 nz-input-group, nz-radio-group {
     margin-bottom: 15px;
     display: block;
 }
-.col {
-    margin: 10px;
-}
 nz-select {
     margin-right: 8px;
     width: 120px !important;
-}
-nz-upload {
-    width: 120px;
-    height: 120px;
-    img {
-        width: 100%;
-    }
 }
