--- a/app/src/app/rooms/rooms.component.html
+++ b/app/src/app/rooms/rooms.component.html
@@ -8,7 +8,7 @@
     <i nz-icon nzType="plus" nzTheme="outline"></i> Create Room
 </a>
 <hr>
-<div nz-row [nzGutter]="6">
+<div nz-row [nzGutter]="6" *ngIf="roomsExist && rooms">
     <div nz-col [nzSpan]="6" *ngFor="let room of rooms">
         <nz-card [nzCover]="coverTemplate" [nzActions]="[ actionEdit, actionDelete]">
             <nz-card-meta
@@ -23,40 +23,11 @@
             {{ room.description }}
         </ng-template>
         <ng-template #actionEdit>
-            <i nz-icon nzType="edit" [routerLink]="['/room', room.id]"></i>
+            <i nz-icon nzType="edit" [routerLink]="['/room', room.id]" nzTooltipTitle="Edit" nz-tooltip></i>
         </ng-template>
         <ng-template #actionDelete>
-            <i nz-icon nzType="delete"></i>
+            <i nz-icon nzType="delete" nzTooltipTitle="Delete" nz-tooltip></i>
         </ng-template>
     </div>
 </div>
-
-<!--
-<nz-table #table [nzData]="rooms">
-    <thead>
-        <th>ID</th>
-        <th>Preview</th>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Action</th>
-    </thead>
-    <tbody>
-        <tr *ngFor="let room of table.data">
-            <td>{{ room.id }}</td>
-            <td>{{ room.photo }}</td>
-            <td>{{ room.name }}</td>
-            <td>{{ room.description }}</td>
-            <td>
-                <nz-button-group>
-                    <button [routerLink]="['/room', room.id]" nz-button nzType="primary" nzShape="round">
-                        <i nz-icon nzType="edit" nzTheme="outline"></i>
-                    </button>
-                    <button nz-button nzType="danger" nzShape="round">
-                        <i nz-icon nzType="delete" nzTheme="outline"></i>
-                    </button>
-                </nz-button-group>
-            </td>
-        </tr>
-    </tbody>
-</nz-table>
--->
+<nz-empty *ngIf="!roomsExist"></nz-empty>
