--- a/app/src/app/users/users.component.html
+++ b/app/src/app/users/users.component.html
@@ -29,10 +29,23 @@
             
             <td>
                 <nz-button-group>
-                    <button [routerLink]="['/user', user.id]" nz-button nzType="primary" nzShape="round">
+                    <button 
+                        [routerLink]="['/user', user.id]" 
+                        nz-button 
+                        nzType="primary" 
+                        nzShape="round"
+                        nz-tooltip
+                        nzTooltipTitle="Edit"
+                    >
                         <i nz-icon nzType="edit" nzTheme="outline"></i>
                     </button>
-                    <button nz-button nzType="danger" nzShape="round">
+                    <button 
+                        nz-button 
+                        nzType="danger" 
+                        nzShape="round"
+                        nz-tooltip
+                        nzTooltipTitle="Edit"
+                    >
                         <i nz-icon nzType="delete" nzTheme="outline"></i>
                     </button>
                 </nz-button-group>
