--- a/front/src/App.css
+++ b/front/src/App.css
@@ -28,10 +28,10 @@
 
 .Main .Content {
   overflow-y: scroll;
-  padding: 35px;
 }
 
 .Wrap {
+  margin: 35px;
   background: #fff;
   box-shadow: 0 0 1em rgba(73, 106, 167, 0.212);
 }
@@ -126,4 +126,15 @@
 
 .RoomView {
   padding: 25px;
+}
+
+.RoomView .img {
+  margin: 10px 0;
+  border-radius: 10px;
+  box-shadow: 0 0 1em rgba(73, 106, 167, 0.212);
+}
+.RoomView .img img {
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
 }
